fix code bug on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --content-width: min(50rem, calc(100vw - 5rem));
+    --content-width: min(50rem, calc(100vw - 4.6rem));
 }
 
 html {
