--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,3 +1,11 @@
+/* Fixes iOS font sizing anomaly */
+code {
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
 /* Background */
 .bg {
     background-color: #1e1e1e;
